# SynthStudio

./: README.md  init-env.sh  piperun.sh  pyproject.toml
SynthStudio/: pyproject.toml
SynthStudio/src/: AudioAndMidi.py  ChordGenerator.py  KarplusStrong.py  Keyboard.py  KeyboardKarplus.py
src/: ChordGenerator.py  play-to-file.py  player-piped.py
