[tool.poetry]
name = "synthstudio"
version = "0.1.0"
description = ""
authors = ["Aidan Crawford <crawforda@ufl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
audiogen = {git = "https://github.com/casebeer/audiogen.git", rev = "python3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
