[tool.poetry]
name = "synthstudio"
version = "0.1.0"
description = ""
authors = ["Aidan Crawford <crawforda@ufl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
audiogen = {git = "https://github.com/dstettler/audiogen.git", rev = "python3"}
pyaudio = "^0.2.14"
pygame = "^2.6.0"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
