[tool.poetry]
name = "synthstudio"
version = "0.1.0"
description = ""
authors = ["Aidan Crawford <crawforda@ufl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"
keyboard = "^0.13.5"
gpiozero = "^2.0.1"
rpi-gpio = "^0.7.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
